// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
      "height": "100vh",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 5,
        "marginX": 10,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={4}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={8}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Typography)
            align="center"
            component="h2"
            variant="h4"
          >
            title
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            sx={
              Object {
                "mt": 2,
              }
            }
          >
            content
          </ForwardRef(Typography)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={4}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests loading 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
      "height": "100vh",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 5,
        "marginX": 10,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={4}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={8}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Box)
            sx={
              Object {
                "display": "flex",
                "justifyContent": "center",
              }
            }
          >
            <ForwardRef(CircularProgress) />
          </ForwardRef(Box)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={4}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;

exports[`Shallow Snapshot Tests mobile view 1`] = `
<ForwardRef(Box)
  sx={
    Object {
      "backgroundColor": "#f4f5f7",
      "height": "100vh",
    }
  }
>
  <GlobalMenu
    barPosition="static"
  />
  <ForwardRef(Box)
    sx={
      Object {
        "marginTop": 1,
        "marginX": 0,
      }
    }
  >
    <ForwardRef(Grid)
      container={true}
      spacing={2}
    >
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="navi"
        >
          <Link
            to="/"
          >
            マップへ戻る
          </Link>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="main"
        >
          <ForwardRef(Typography)
            align="center"
            component="h2"
            variant="h4"
          >
            title
          </ForwardRef(Typography)>
          <ForwardRef(Typography)
            sx={
              Object {
                "mt": 2,
              }
            }
          >
            content
          </ForwardRef(Typography)>
        </ArticlePaper>
      </ForwardRef(Grid)>
      <ForwardRef(Grid)
        item={true}
        xs={12}
      >
        <ArticlePaper
          variant="side"
        >
          サイドバー
        </ArticlePaper>
      </ForwardRef(Grid)>
    </ForwardRef(Grid)>
  </ForwardRef(Box)>
</ForwardRef(Box)>
`;
